Added still more Meta tags

--- a/W1/D1/P1.html
+++ b/W1/D1/P1.html
@@ -13,7 +13,7 @@
      <meta property="og:image" content="image.jpeg"/>
      <title>Document</title>
      <meta name="twitter:card" content="Summary of the card" />
-     <meta name="twitter:title" content="Html Meta tags example"/>
+     <meta name="twitter:title" charset="Html Meta tags example"/>
 </head>
 <body>
     <p>Example for Meta tags</p>   
