--- a/W1/D1/P1.html
+++ b/W1/D1/P1.html
@@ -16,6 +16,6 @@
      <meta name="twitter:title" charset="Html Meta tags example"/>
 </head>
 <body>
-    <p>Example for Meta tags</p>   
+    <p>Example for Meta </p>   
 </body>
 </html>
