--- a/W1/D3/P1.html
+++ b/W1/D3/P1.html
@@ -11,7 +11,7 @@
         <thead>
             <tr>
                 <th>Student Name</th>
-                <th>Reg. no.</th>
+                <th>Register no.</th>
             </tr>
         </thead>
         <tbody>
