HTML Tables more features

--- a/W1/D3/P2.html
+++ b/W1/D3/P2.html
@@ -22,7 +22,7 @@
                 <th rowspan="2">Total Marks</th>
             </tr>
             <tr>
-                <th>Math</th>
+                <th>Maths</th>
                 <th>Science</th>
             </tr>
         </thead>
