--- a/W1/D3/P3.html
+++ b/W1/D3/P3.html
@@ -10,7 +10,7 @@
      <h3>Video & Audio tag usage</h3>
      <video width="640" height="360" controls>
         <source src="html.mp4" type="video/mp4">
-        No video link found
+        No video link found.
      </video>
      <audio controls>
         <source src="html.mp3" type="audio/mpeg">
