--- a/W1/D3/P4.html
+++ b/W1/D3/P4.html
@@ -6,7 +6,7 @@
     <title>Iframes</title>
 </head>
 <body>
-    <!-- Learning about iframe usage -->
+    <!-- Learning about iframe usage. -->
      <iframe src="https://www.wikipedia.org" frameborder="1"
       width="800"
       height="400" title="Google"></iframe>
