--- a/W1/D3/P13.html
+++ b/W1/D3/P13.html
@@ -6,7 +6,7 @@
     <title>Inline elements</title>
     <style>
         .inline-element{
-            display: none;
+            display: inline-block;
             padding: 5px 10px;
             border: 1px solid black;
             margin: 10px;
